--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -1,6 +1,17 @@
 $image-path: '..//assets/images' !default;
 
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(180deg);
+  }
+}
+
 .TruchetBackground {
+  --color-1: var(--background);
+  --color-2: var(--light-background);
   overflow: hidden;
   height: 100%;
   width: 100%;
@@ -30,7 +41,8 @@ $image-path: '..//assets/images' !default;
 }
 
 .tile {
-
+  transition: rotate var(--animation-duration-slow) var(--animation-easing);
+  
   svg {
     width: 100%;
     height: 100%;
@@ -49,13 +61,13 @@ $image-path: '..//assets/images' !default;
     }
 
     .cls-1 {
-      fill:black;
+      fill:var(--color-1);
       fill-opacity: 1;
       stroke:none
     }
     
     .cls-2 {
-      fill:white;
+      fill: var(--color-2);
       fill-opacity: 1;
       stroke:none
     }
@@ -70,13 +82,13 @@ $image-path: '..//assets/images' !default;
     }
 
     .cls-1 {
-      fill:white;
+      fill: var(--color-2);
       fill-opacity: 1;
       stroke:none
     }
     
     .cls-2 {
-      fill:black;
+      fill:var(--color-1);
       fill-opacity: 1;
       stroke:none
     }
@@ -92,13 +104,13 @@ $image-path: '..//assets/images' !default;
     }
 
     .cls-1 {
-      fill:black;
+      fill:var(--color-1);
       fill-opacity: 1;
       stroke:none
     }
     
     .cls-2 {
-      fill:white;
+      fill: var(--color-2);
       fill-opacity: 1;
       stroke:none
     }
@@ -113,13 +125,13 @@ $image-path: '..//assets/images' !default;
     }
 
     .cls-1 {
-      fill:white;
+      fill: var(--color-2);
       fill-opacity: 1;
       stroke:none
     }
     
     .cls-2 {
-      fill:black;
+      fill:var(--color-1);
       fill-opacity: 1;
       stroke:none
     }
