--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -59,12 +59,13 @@
 
     &--has-icon {
       .#{$button-class}__content {
-        margin: 0 0 0 2rem;
+        margin-left: -2rem;
       }
     }
 
     &__content {
-      margin: 0 2rem;
+      padding: 0 2rem;
+      flex: 1 1 auto;
     }
 
     // light color variations
