dont apply to disabled elements

--- a/src/styles/global/core/_clickable.scss
+++ b/src/styles/global/core/_clickable.scss
@@ -10,14 +10,14 @@
   box-shadow: 0 $adjusted-shadow-size rgba(0, 0, 0, 0.35); //sass-lint:disable-line no-color-literals
   transition: transform var(--animation-duration-fast) var(--animation-easing), box-shadow var(--animation-duration-fast) var(--animation-easing);
 
-  &:hover {
+  &:not(:disabled):hover {
     text-decoration: none;
     cursor: pointer;
     transform: translateY(-#{$adjusted-shadow-size});
     box-shadow: 0 #{$adjusted-shadow-size * 2} $adjusted-blur 0 rgba(0, 0, 0, 0.35);
   }
 
-  &:active {
+  &:not(:disabled):active {
     box-shadow: unset;
     transform: translateY($adjusted-shadow-size);
   }
