implement allow-text-selection class and mixin, and disable selection elsewhere

--- a/src/styles/global/_default.scss
+++ b/src/styles/global/_default.scss
@@ -11,7 +11,7 @@
 @import 'core/quicksand';
 @import 'core/normalize';
 @import 'core/z-index';
-@import 'core/clickable';
+@import 'core/helpers';
 
 $export-ui-classes: true !default;
 
