--- a/src/styles/global/core/_helpers.scss
+++ b/src/styles/global/core/_helpers.scss
@@ -1,4 +1,3 @@
-
 @mixin clickable($depth: 1) {
   $base-shadow: 0.2rem;
   $base-blur: 0.2rem;
@@ -20,5 +19,13 @@
   &:not(:disabled):active {
     box-shadow: unset;
     transform: translateY($adjusted-shadow-size);
+  }
+}
+
+
+@mixin allow-text-selection {
+  user-select: text;
+  & * {
+    user-select: text;
   }
 }
