--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -1,29 +1,30 @@
 .dialog {
-  max-width: 50rem;
+  max-width: 60rem;
+  display: flex;
+  flex-direction: column;
   background: var(--modal-background);
   color: var(--text-light);
   box-shadow: 0 0 4rem 0 var(--modal-window-box-shadow);
-  position: relative;
   border-color: var(--primary);
   border-style: solid;
   border-width: 0;
   border-left-width: 0.5rem;
   border-radius: 0.75rem;
   max-height: 80vh;
-  overflow-x: hidden;
-  overflow-y: auto;
 
   &__main {
+    flex: 1 1 100%;
     display: flex;
+    flex-direction: row;
     width: 100%;
-    padding: 2rem 3rem 0;
+    padding: unit(4) unit(4) 0;
 
     &-content {
       order: 1;
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      overflow-y: auto;
+      flex: 1 1 auto;
+      height: 100%;
+      padding: 0 unit(4);
     }
 
     &-title {
@@ -34,9 +35,10 @@
 
     &-icon {
       order: 1;
-      flex: 0 0 10rem;
+      flex: 0 0 8rem;
       display: flex;
       align-items: center;
+      justify-content: center;
 
       .icon {
         height: 7.5rem;
@@ -73,6 +75,7 @@
   &__footer {
     margin: 2rem 3rem;
     text-align: right;
+    flex: 1 0 auto;
 
     .button {
       &:last-child {
