add default link color

--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -50,14 +50,13 @@
   &__additional {
 
     &-box {
-      height: 15rem;
+      max-height: 15rem;
       padding: 1.5rem;
       margin-top: 1.5rem;
       background: var(--background);
       user-select: initial;
       overflow-y: auto;
       overflow-x: hidden;
-      margin: 1.5rem 3rem;
       border-radius: var(--border-radius);
 
       h1,
