--- a/src/styles/global/_default.scss
+++ b/src/styles/global/_default.scss
@@ -219,6 +219,9 @@ $system-font-stack: 'system-ui', sans-serif;
   // Default border radius
   --border-radius: .75rem;
 
+  // Link color
+  --link-color: var(--color-neon-coral);
+
   // each item in color map
   @each $name, $color in $-color-map {
     #{'--'}color-#{$name}: #{'rgb('}#{$color}#{')'};
@@ -289,6 +292,10 @@ $system-font-stack: 'system-ui', sans-serif;
 html {
   font-family: var(--body-font-family);
   font-size: var(--base-font-size);
+}
+
+a {
+  color: var(--link-color);
 }
 
 // Headings
