Add ProtocoLCard component

--- a/src/styles/components/_all.scss
+++ b/src/styles/components/_all.scss
@@ -6,7 +6,9 @@
 @import 'sidemenu';
 @import 'node';
 @import 'expandable';
+@import 'scrollable';
 @import 'narrative-panel';
 @import 'dialog';
 @import 'modal';
 @import 'progress';
+@import 'cards/cards';
