update modal transition

--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -423,7 +423,7 @@
       position: relative;
       min-height: 100px;
       min-width: 100px;
-      margin-right: 1.5rem;
+      margin-right: unit(2);
 
       .input__label {
         position: static;
