--- a/src/styles/components/form/_fields.scss
+++ b/src/styles/components/form/_fields.scss
@@ -27,7 +27,7 @@
   color: var(--input-text);
   border-radius: 1rem 1rem 0 0;
   margin-bottom: 2rem;
-  padding: 1rem 1.5rem;
+  padding: 1rem unit(2);
   width: 100%;
   min-height: 4rem;
   display: flex;
