--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -30,7 +30,7 @@
     &-title {
       text-transform: uppercase;
       font-weight: 700;
-      margin-bottom: 1.5rem;
+      margin-bottom: unit(2);
     }
 
     &-icon {
@@ -72,7 +72,7 @@
 
     .button {
       &:last-child {
-        margin-left: 1.5rem;
+        margin-left: unit(2);
       }
     }
   }
@@ -96,7 +96,7 @@
       padding: unit(2);
       width: 100%;
       white-space: pre-wrap;
-      word-break: break-all;
+      word-break: break-word;
     }
   }
 
