--- a/src/styles/components/form/fields/_date-picker.scss
+++ b/src/styles/components/form/fields/_date-picker.scss
@@ -98,23 +98,11 @@ $darken: rgba(0, 0, 0, 0.2);
   }
 
   &__panels {
-
-    position: relative;
-    // display: block;
-    // width: 100%;
-    // overflow: hidden;
-    // box-sizing: border-box;
-    // // height: 0;
+    background-color: var(--background);
     height: $height;
-    // transform-origin: top left;
-    // transition: height var(--animation-easing) var(--animation-duration-standard) var(--animation-duration-fast),
-    // transform var(--animation-easing) var(--animation-duration-standard) var(--animation-duration-fast);
 
-    &--is-open {
-      // height: $height;
-      // transform: scaleY(1);
-      // transition: height var(--animation-easing) var(--animation-duration-standard),
-      // transform var(--animation-easing) var(--animation-duration-standard);
+    &__panels-container {
+      height: $height;
     }
   }
 
@@ -122,35 +110,12 @@ $darken: rgba(0, 0, 0, 0.2);
     position: absolute;
     top: 0;
     left: 0;
-    // width: 100%;
     height: $height;
-    // display: flex;
-    // box-sizing: content-box;
-    // background-color: var(--input-background);
-    // flex-direction: column;
-    // transform: translateX(100%);
-    // transition: transform var(--animation-easing) var(--animation-duration-standard) var(--animation-duration-fast);
-    // border: 0;
-
-    // &--is-active {
-    //   transform: translateX(0);
-    // }
-
-    &--is-complete {
-      transform: translateX(-100%);
-    }
     display: flex;
     flex-direction: row;
     width: 100%;
     flex: 0 1 100%;
   }
-
-  // &__panel-content {
-  //   display: flex;
-  //   flex-direction: row;
-  //   width: 100%;
-  //   flex: 0 1 100%;
-  // }
 
   &__highlight {
     display: flex;
