server card styling complete

--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -56,7 +56,7 @@
     &-box {
       @include allow-text-selection;
       margin-top: unit(2);
-      max-height: 50vh;
+      max-height: 25rem;
       background: var(--background);
       user-select: initial;
       overflow-y: auto;
