--- a/src/styles/components/toasts/_toasts.scss
+++ b/src/styles/components/toasts/_toasts.scss
@@ -6,30 +6,30 @@
 
   .toast-container-list {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: unit(4);
+    right: unit(2);
     display: flex;
     flex-direction: column;
     list-style: none;
     justify-content: flex-end;
     padding: 0;
     margin: 0;
-    z-index: var(--z-fx-super);
+    z-index: var(--z-modal);
   }
 }
  
 .toast {
-  width: unit(40);
+  width: 30rem;
   background: var(--color-platinum);
-  margin: unit(1) unit(4);
+  margin: unit(2) unit(6);
   padding: unit(4);
   flex: 0 0 unit(15);
   position: relative;
   display: flex;
   border-radius: var(--border-radius);
-  border-left: 0.5rem solid tomato;
+  border-bottom: 0.5rem solid tomato;
   color: var(--text-dark);
-  box-shadow: 0 0.6rem 0.6rem 0 rgba(0, 0, 0, 0.43);
+  box-shadow: 0 unit(1) unit(3) unit(0.5) rgba(0, 0, 0, 0.4);
 
   &--info {
     border-color: var(--info);
@@ -43,13 +43,47 @@
     border-color: var(--primary);
   }
 
+  .toast-icon {
+    flex: 0 0 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: unit(4);
+
+    > .icon {
+      width: 100% !important;
+      height: 100% !important;
+
+      &[name="info"] {
+        .cls-3 {
+          fill: var(--color-platinum--dark);
+        }
+
+        .cls-4 {
+          fill: #d2d9da;
+        }
+      }
+
+      &[name="warning"] {
+        .cls-1 {
+          fill: var(--color-platinum--dark);
+        }
+
+        .cls-2 {
+          fill: #d2d9da;
+        }
+      }
+    }
+  }
 
   .toast-content {
     flex: 1;
     margin-right: unit(2);
+    font-weight: 500;
 
     &__title {
       margin-top: 0;
+      font-weight: 700;
     }
   }
 
