add icons and selected state to session card

--- a/src/styles/components/_graphic-button.scss
+++ b/src/styles/components/_graphic-button.scss
@@ -9,6 +9,7 @@
   position: relative;
   justify-content: center;
   align-items: center;
+  background-blend-mode: luminosity;
 
   &__label {
     position: relative;
