--- a/src/styles/components/cards/_session-card.scss
+++ b/src/styles/components/cards/_session-card.scss
@@ -4,23 +4,37 @@
   border-radius: var(--border-radius);
   display: flex;
   flex-direction: column;
-  max-height: 20rem;
+  height: 11rem;
   color: var(--color-navy-taupe);
   justify-content: space-between;
-  margin: unit(2);
   overflow: hidden;
+  box-sizing: border-box;
+  position: relative;
 
   &--clickable {
     @include clickable(2);
   }
 
+  &--selected {
+    &:before {
+      content: '';
+      position:absolute;
+      top:0;
+      bottom:0;
+      left:0;
+      right: 0;
+      border: 0.4rem solid var(--color-mustard);
+      border-radius: var(--border-radius);
+    }
+  }
+
   .meta-wrapper {
     display: flex;
-    padding: unit(1) unit(4);
+    padding: 0 unit(4);
     background: var(--color-platinum--dark);
     align-items: center;
     justify-content: space-between;
-    flex: 1 1 auto;
+    flex: 1 1 50%;
     width: 100%;
 
     .meta {
@@ -28,22 +42,25 @@
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
-      width: 75%;
+      width: 50%;
 
       .highlight {
         color: var(--error);
       }
 
       h6 {
-        margin: 0.3rem;
+        margin: 0;
         text-transform: uppercase;
         letter-spacing: 0.15em;
         font-size: 0.6rem;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
         width: 100%;
-        padding-right: unit(2);
+        margin: 0.4rem 0;
+      }
+
+      img {
+        width: unit(2);
+        height: unit(2);
+        margin-right: unit(1);
       }
 
     }
@@ -51,22 +68,21 @@
     .progress-wrapper {
       height: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      max-width: 7rem;
-      width: 25%;
+      align-items: center;
+      width: 100%;
+      margin: 0.4rem 0;
 
-      h6 {
-        margin: 0 0 0.3rem;
+      span {
         text-transform: uppercase;
         letter-spacing: 0.15em;
         font-size: 0.6rem;
+        font-weight: 700;
+        margin-right: unit(1);
       }
 
       .progress-bar {
-        width: 100%;
         background-color: var(--color-platinum);
-        flex: 0 0.7rem;
+        flex: 1;
 
         .progress-bar__filler {
           background-color: var(--color-cerulean-blue);
@@ -83,17 +99,35 @@
   }
 
   .main-wrapper {
-    flex: 1 1 auto;
-    padding: unit(4);
+    flex: 1 1 50%;
+    padding: 0 unit(4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
-    .card__label {
-      flex: 0 0 auto;
-      margin: 0;
-      align-items: center;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      width: 100%;
+    .card {
+    
+      &__label {
+        flex: 0 0 auto;
+        margin: 0;
+        align-items: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
+      }
+
+      &__protocol {
+        flex: 0 0 auto;
+        margin: 0.4rem 0 0;
+        align-items: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 100%;
+      }
+
+
     }
   }
 
