fix date picker fendering and toggle button label size

--- a/src/styles/components/form/fields/_date-picker.scss
+++ b/src/styles/components/form/fields/_date-picker.scss
@@ -100,10 +100,11 @@ $darken: rgba(0, 0, 0, 0.2);
   &__panels {
     background-color: var(--background);
     height: $height;
+  }
 
-    &__panels-container {
-      height: $height;
-    }
+  &__panels-container {
+    height: $height;
+    position: relative;
   }
 
   &__panel {
