--- a/src/styles/components/_dialog.scss
+++ b/src/styles/components/_dialog.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   background: var(--modal-background);
-  color: var(--text-light);
+  color: var(--text);
   box-shadow: 0 0 4rem 0 var(--modal-window-box-shadow);
   border-color: var(--primary);
   border-style: solid;
