remove toast flex height

--- a/src/styles/components/toasts/_toasts.scss
+++ b/src/styles/components/toasts/_toasts.scss
@@ -23,7 +23,7 @@
   background: var(--color-platinum);
   margin: unit(2) unit(6);
   padding: unit(4);
-  flex: 0 0 unit(15);
+  flex: 0 0 auto;
   position: relative;
   display: flex;
   border-radius: var(--border-radius);
