fix theming and build process

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -49,11 +49,15 @@
 
     &--has-icon {
 
-      &:not(.button--icon-pos-right) {
-        .#{$button-class}__content {
-          margin-left: -2rem;
-        }
+      .#{$button-class}__content {
+        margin-left: 0;
       }
+
+      // &:not(.button--icon-pos-right) {
+      //   .#{$button-class}__content {
+      //     margin-left: -2rem;
+      //   }
+      // }
 
       &.button--icon-pos-right {
         .#{$button-class}__content {
