--- a/src/styles/components/form/fields/_checkbox.scss
+++ b/src/styles/components/form/fields/_checkbox.scss
@@ -13,9 +13,8 @@ $border-space: 0.25rem;
   }
 
   &__input {
-    opacity: 0;
-    left: 0;
-    top: 0;
+    position: absolute;
+    opacity: 0
   }
 
   &__checkbox {
