exempt input and textarea from user-select:none

--- a/src/styles/global/core/_normalize.scss
+++ b/src/styles/global/core/_normalize.scss
@@ -30,7 +30,9 @@
 
 
   // Prevent text selection except when an element has a given class.
-  * {
+  // IMPORTANT: input and textarea are excepted because including them
+  // locks the input on iOS!
+  *:not(input):not(textarea) {
     user-select: none;
 
     .allow-text-selection,
