initial markdown editor setup

--- a/src/styles/components/form/_fields.scss
+++ b/src/styles/components/form/_fields.scss
@@ -70,3 +70,4 @@ $size: 2rem;
 @import './fields/range';
 @import './fields/slider';
 @import './fields/date-picker';
+@import './fields/rich-text';
